# 170-Robotics

./: README.md  ROS.doc
CodeExamplesFromTheLectureNotes/: CMakeLists.txt  chatter.cpp  drawsquare.cpp  followplan.cpp  listener.cpp  movearound.cpp  movearoundwithfeedback.cpp  package.xml  republishpose.cpp  servicecall.cpp  turtlebot.cpp
devel/: setup.sh
devel/include/husky_msgs/: HuskyStatus.h
devel/lib/pkgconfig/: husky_control.pc  husky_description.pc  husky_gazebo.pc  husky_msgs.pc  husky_navigation.pc  husky_ur5_moveit_config.pc  husky_viz.pc  simple.pc
devel/lib/simple/: chatter  drawsquare  eigen  followplan  getplan  move_around  moveongrid  navigatepoints  printcolor
devel/share/gennodejs/ros/husky_msgs/msg/: HuskyStatus.js
devel/share/husky_control/cmake/: husky_controlConfig.cmake
devel/share/husky_description/cmake/: husky_descriptionConfig.cmake
devel/share/husky_gazebo/cmake/: husky_gazeboConfig.cmake
devel/share/husky_msgs/cmake/: husky_msgs-msg-extras.cmake  husky_msgs-msg-paths.cmake  husky_msgsConfig.cmake
devel/share/husky_navigation/cmake/: husky_navigationConfig.cmake
devel/share/husky_ur5_moveit_config/cmake/: husky_ur5_moveit_configConfig.cmake
devel/share/husky_viz/cmake/: husky_vizConfig.cmake
devel/share/roseus/ros/husky_msgs/: manifest.l
devel/share/simple/cmake/: simpleConfig.cmake
src/simple/: CMakeLists.txt  chatter.cpp  drawsquare.cpp  eigen.cpp  followplan.cpp  getplan.cpp  lab1.launch  lab3a.launch  lab3b.launch  lab5.launch  move_around.cpp  moveongrid.cpp  navigatepoints.cpp  package.xml  printcolor.cpp
