<?xml version="1.0"?>
<package>
  <name>simple</name>
  <version>0.0.0</version>
  <description>The simple package</description>

  <maintainer email="miguel@todo.todo">miguel</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>turtlesim</build_depend>
  <run_depend>turtlesim</run_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>move_base_msgs</build_depend>
  <run_depend>move_base_msgs</run_depend>

  <export></export>
</package>
